Fix paragraph alignment issue with deployed version

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,6 +33,8 @@ body {
 
 p {
     font-size: 1rem;
+    width: 100%;
+    text-align: center;
 }
 
 .jumbotron {
